[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/User_Interface/Menus/game_setup/game_setup.gd" type="Script" id=1]
[ext_resource path="res://Assets/Themes/lexend_menu_regular_text.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Themes/lexend_menu_title.tres" type="Theme" id=3]

[node name="game_setup" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="game_setup_menu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_title" type="Label" parent="game_setup_menu"]
margin_left = 737.35
margin_top = 8.32446
margin_right = 1124.35
margin_bottom = 88.3245
theme = ExtResource( 3 )
text = "Game Setup"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_back" type="Button" parent="game_setup_menu"]
margin_left = 887.682
margin_top = 378.384
margin_right = 957.682
margin_bottom = 414.384
focus_neighbour_left = NodePath("../ctrl_online/btn_upnp_open_port")
theme = ExtResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ctrl_map_selection" type="Control" parent="game_setup_menu"]
margin_left = 748.0
margin_top = 97.0
margin_right = 1121.0
margin_bottom = 327.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_start" type="Button" parent="game_setup_menu/ctrl_map_selection"]
margin_left = 145.91
margin_top = 177.192
margin_right = 215.91
margin_bottom = 213.192
focus_neighbour_left = NodePath("../../ctrl_online/btn_find_public_ip")
focus_neighbour_top = NodePath("../list_maps")
theme = ExtResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="list_maps" type="OptionButton" parent="game_setup_menu/ctrl_map_selection"]
margin_left = 57.3784
margin_top = 89.6216
margin_right = 346.378
margin_bottom = 142.622
focus_neighbour_left = NodePath("../../ctrl_online/btn_find_public_ip")
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_maps" type="Label" parent="game_setup_menu/ctrl_map_selection"]
margin_left = 114.164
margin_top = 35.6762
margin_right = 243.164
margin_bottom = 65.6762
theme = ExtResource( 2 )
text = "Select Map"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ctrl_online" type="Control" parent="game_setup_menu"]
margin_left = 174.264
margin_top = 154.698
margin_right = 174.264
margin_bottom = 154.698
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_server" type="Label" parent="game_setup_menu/ctrl_online"]
margin_left = 273.723
margin_top = -58.5202
margin_right = 369.723
margin_bottom = -28.5202
theme = ExtResource( 2 )
text = "Server"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_online_host" type="Button" parent="game_setup_menu/ctrl_online"]
margin_left = 273.723
margin_top = -14.7936
margin_right = 343.723
margin_bottom = 21.2064
focus_neighbour_right = NodePath("../btn_find_public_ip")
theme = ExtResource( 2 )
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_public_ip" type="Label" parent="game_setup_menu/ctrl_online"]
margin_left = 402.247
margin_top = -58.5202
margin_right = 512.247
margin_bottom = -28.5202
theme = ExtResource( 2 )
text = "Public IP:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_public_ip_number" type="LineEdit" parent="game_setup_menu/ctrl_online"]
margin_left = 398.296
margin_top = -26.0
margin_right = 606.296
margin_bottom = 14.0
hint_tooltip = "IPv4 Address"
theme = ExtResource( 2 )
text = "Unknown"
editable = false
placeholder_text = "IP Address of Host"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_find_public_ip" type="Button" parent="game_setup_menu/ctrl_online"]
margin_left = 404.358
margin_top = 33.933
margin_right = 577.358
margin_bottom = 69.933
theme = ExtResource( 2 )
text = "Find Public IP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_upnp" type="Label" parent="game_setup_menu/ctrl_online"]
margin_left = 273.723
margin_top = 107.983
margin_right = 383.723
margin_bottom = 137.983
theme = ExtResource( 2 )
text = "UPNP:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_upnp_open_port" type="Button" parent="game_setup_menu/ctrl_online"]
margin_left = 353.401
margin_top = 106.404
margin_right = 483.401
margin_bottom = 142.404
focus_neighbour_bottom = NodePath("../btn_online_join")
theme = ExtResource( 2 )
text = "Open Port"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_upnp_port_number" type="Label" parent="game_setup_menu/ctrl_online"]
margin_left = 492.723
margin_top = 108.48
margin_right = 602.723
margin_bottom = 138.48
theme = ExtResource( 2 )
text = "Default"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_upnp_result" type="Label" parent="game_setup_menu/ctrl_online"]
margin_left = 374.33
margin_top = 152.16
margin_right = 484.33
margin_bottom = 182.16
theme = ExtResource( 2 )
text = "Result"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_client" type="Label" parent="game_setup_menu/ctrl_online"]
margin_left = -151.02
margin_top = 365.245
margin_right = -62.0198
margin_bottom = 395.245
theme = ExtResource( 2 )
text = "Client"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_online_join" type="Button" parent="game_setup_menu/ctrl_online"]
margin_left = -151.02
margin_top = 412.425
margin_right = -81.0198
margin_bottom = 448.425
theme = ExtResource( 2 )
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="le_ipv4" type="LineEdit" parent="game_setup_menu/ctrl_online"]
margin_left = -151.0
margin_top = 464.0
margin_right = 57.0
margin_bottom = 504.0
hint_tooltip = "IPv4 Address"
theme = ExtResource( 2 )
placeholder_text = "Host's IPv4"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ctrl_local_ips" type="Control" parent="game_setup_menu/ctrl_online"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="list_local_ips" type="ItemList" parent="game_setup_menu/ctrl_online/ctrl_local_ips"]
margin_left = -160.0
margin_top = -20.0
margin_right = 263.0
margin_bottom = 266.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_client2" type="Label" parent="game_setup_menu/ctrl_online/ctrl_local_ips"]
margin_left = -156.795
margin_top = -63.2538
margin_right = 110.205
margin_bottom = -33.2538
theme = ExtResource( 2 )
text = "Local IP Addresses"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Players" type="Label" parent="."]
margin_left = 1330.53
margin_top = 153.793
margin_right = 1416.53
margin_bottom = 183.793
theme = ExtResource( 2 )
text = "Players"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="le_set_your_name" type="LineEdit" parent="Players"]
margin_left = 219.783
margin_top = -14.023
margin_right = 452.783
margin_bottom = 25.977
hint_tooltip = "IPv4 Address"
theme = ExtResource( 2 )
placeholder_text = "Set Your Name"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerList" type="ItemList" parent="Players"]
margin_left = 2.0
margin_top = 31.0
margin_right = 458.0
margin_bottom = 357.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerList_Refresh_Timer" type="Timer" parent="Players"]
wait_time = 0.3
autostart = true

[connection signal="pressed" from="game_setup_menu/btn_back" to="." method="_on_btn_back_pressed"]
[connection signal="pressed" from="game_setup_menu/ctrl_map_selection/btn_start" to="." method="_on_btn_start_pressed"]
[connection signal="item_selected" from="game_setup_menu/ctrl_map_selection/list_maps" to="." method="_on_list_maps_item_selected"]
[connection signal="pressed" from="game_setup_menu/ctrl_online/btn_online_host" to="." method="_on_btn_online_host_pressed"]
[connection signal="gui_input" from="game_setup_menu/ctrl_online/lbl_public_ip_number" to="." method="_on_lbl_public_ip_number_gui_input"]
[connection signal="text_entered" from="game_setup_menu/ctrl_online/lbl_public_ip_number" to="." method="_on_lbl_public_ip_number_text_entered"]
[connection signal="pressed" from="game_setup_menu/ctrl_online/btn_find_public_ip" to="." method="_on_btn_find_public_ip_pressed"]
[connection signal="pressed" from="game_setup_menu/ctrl_online/btn_upnp_open_port" to="." method="_on_btn_upnp_open_port_pressed"]
[connection signal="pressed" from="game_setup_menu/ctrl_online/btn_online_join" to="." method="_on_btn_online_join_pressed"]
[connection signal="gui_input" from="game_setup_menu/ctrl_online/le_ipv4" to="." method="_on_le_ipv4_gui_input"]
[connection signal="text_entered" from="game_setup_menu/ctrl_online/le_ipv4" to="." method="_on_le_ipv4_text_entered"]
[connection signal="item_activated" from="game_setup_menu/ctrl_online/ctrl_local_ips/list_local_ips" to="." method="_on_list_local_ips_item_activated"]
[connection signal="gui_input" from="Players/le_set_your_name" to="." method="_on_le_set_your_name_gui_input"]
[connection signal="text_entered" from="Players/le_set_your_name" to="." method="_on_le_set_your_name_text_entered"]
[connection signal="item_selected" from="Players/PlayerList" to="." method="_on_PlayerList_item_selected"]
[connection signal="timeout" from="Players/PlayerList_Refresh_Timer" to="." method="_on_PlayerList_Refresh_Timer_timeout"]
